erDiagram

%% CHECKING, SAVINGS
    MON_ACCOUNT_TYPE {
        CHAR(36) ID PK
        CHAR(1) FLG_ACTIVE
        VARCHAR(50) TXT_DESCRIPTION
    }

    MON_ACCOUNT {
        CHAR(36) ID PK
        CHAR(36) TXT_TYPE FK
        VARCHAR(80) TXT_NAME
        DECIMAL DEC_CREDIT_LIMIT
        DECIMAL DEC_OVERDRAFT_LIMIT
        INT NUM_CLOSING_DAY
        INT NUM_DUE_DAY
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    MON_ACCOUNT_TYPE ||--o{ MON_ACCOUNT : ""

%% SCHEDULED, CONFIRMED, PENDING
    MON_STATUS {
        VARCHAR(20) ID PK
        CHAR(1) FLG_ACTIVE
        VARCHAR(50) TXT_DESCRIPTION
    }

%% FIXED, VARIABLE
    MON_COST_CENTER {
        CHAR(36) ID PK
        CHAR(1) FLG_ACTIVE
        VARCHAR(50) TXT_DESCRIPTION
    }

    MON_TRANSACTION {
        CHAR(36) ID PK
        VARCHAR(255) TXT_DESCRIPTION
        NUMERIC(1) NUM_SIGNAL
        DECIMAL DEC_AMOUNT
        TIMESTAMP TMS_PURCHASE
        CHAR(36) COD_ACCOUNT FK
        CHAR(36) COD_CARD FK
        CHAR(36) COD_COST_CENTER FK
        CHAR(36) COD_STATUS FK
        DATE DAT_PAYMENT
        CHAR(36) GROUP_ID
        INT NUM_INSTALLMENT
        INT NUM_INSTALLMENT_TOTAL
        VARCHAR(1000) TXT_NOTES
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    MON_COST_CENTER ||--o{ MON_TRANSACTION : ""
    MON_STATUS ||--o{ MON_TRANSACTION : ""
    MON_ACCOUNT ||--o{ MON_TRANSACTION : ""

%% Cartão é identificado só pelo last4; vinculado a uma conta real
    MON_CARD {
        CHAR(36) ID PK
        CHAR(36) COD_ACCOUNT FK
        CHAR(4) TXT_LAST4
        CHAR(1) FLG_ACTIVE
        TIMESTAMP TMS_CREATE_AT
        TIMESTAMP TMS_UPDATED_AT
    }

    MON_ACCOUNT ||--o{ MON_CARD : ""
    MON_CARD |o--o{ MON_TRANSACTION : ""

